// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Should show the component with customized title 1`] = `
<span
  className="productDescription undefined"
>
  Custome Product
</span>
`;

exports[`ProductTitle Should show the component with the product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Without image
  </span>
</div>
`;
